syntax = "proto3";

option go_package = "github.com/adetunjii/streaming-service/pb;grpcservice";

package videoservice;

message VideoRequest {
    string id = 1;
}

message VideoResponse {
    bytes buffer = 1;
    int32 part = 2;
}

service VideoService {
    rpc GetVideoStream(VideoRequest) returns (stream VideoResponse);
}
